# FaceGuard

./: .gitignore  README.md
backend/: app.py  database.py  pyproject.toml
backend/core/: config_manager.py  face_engine.py  model_downloader.py
backend/routes/: __init__.py  config.py  logs.py  recognition.py  users.py
backend/utils/: file_utils.py  image_utils.py  logger.py
frontend/: package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/assets/: main.css
frontend/src/components/: AddUser.vue  CameraView.vue  ImageRecognition.vue  LogTable.vue  Settings.vue  UserList.vue
frontend/src/router/: index.js
frontend/src/views/: Admin.vue  Dashboard.vue
